# ddb_hotkeys_rs

./: Cargo.toml  README.md
deadbeef-sys/: wrapper.h
deadbeef-sys/src/: conf_item.rs  lib.rs  plugin.rs
plugin/: Cargo.toml
plugin/src/: keysyms.rs  lib.rs  plugin.rs  shortcuthandler.rs  utils.rs
